# emaild

./: Cargo.toml
src/: main.rs
