[package]
name = "emaild"
version = "0.1.0"
authors = ["Justus Croskery <justus@olmmcc.tk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.13", features = ["full"] }
gmail = { git = "https://github.com/Somebody62/gmail" }
mysql = { git = "https://github.com/Somebody62/mysql" }
chrono = "0.4.11"
futures = "0.3.4"
